# rag-openai-bot

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/bot/: bot.py  cli.py  conversational_retrieval_agent.py  document_manager.py  embedding_manager.py  slack_bot.py  slack_template.py  telegram_bot.py  tool.py  utils.py
src/bot/document_loader/: html.py  markdown.py
src/bot/slack/: __init__.py  document_retriever.py
src/meowth/: conversational_retrieval_agent.py  embedding_manager.py  slack_bot.py
src/meowth/document_loader/: markdown.py
src/script/: main.py
