[project]
name = "bot"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "chechiachang", email = "untru1999@chechia.net" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "langchain-qdrant>=0.2.0",
    "loguru>=0.7.3",
    "markdown>=3.7",
    "python-telegram-bot>=21.10",
    "ratelimit>=2.2.1",
    "slack-bolt>=1.22.0",
    "unstructured>=0.16.20",
]

[project.scripts]
telegram = "bot.cli:run_telegram"
slack = "bot.cli:run_slack"
qa = "bot.cli:qa"
embedding = "bot.tool:embedding"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.3",
    "toml>=0.10.2",
    "pip>=24.2",
    "types-cachetools>=5.5.0.20240820",
    "types-pytz>=2024.2.0.20241003",
    "types-redis>=4.6.0.20241004",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
